kubernetes/apps/home-automation/zigbee2mqtt/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zigbee2mqtt
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - z2m.${DOMAIN}
  rules:
    - backendRefs:
        - name: zigbee2mqtt
          namespace: home-automation
          port: 8080
